tests/should_fail/helpers/circular_b_helper.module
-- Module B that imports module A (creates circular dependency)
let a = import("./circular_a_helper.module")
